# leds

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml
docs/: Makefile
docs/source/: .py_api_exclude  conf.py  index.rst
src/leds/: __init__.py  cli.py  core.py
tests/: test_core.py
